# NinePMonad

./: CHANGELOG.md  LICENSE  NineP2000.cabal  NinePMonad.cabal  README.md  cabal.project  freeze-file
.github/workflows/: haskell.yml
app/: Main.hs
example/: Main.hs
lenses/Lens/Micro/: Effectful.hs  Freer.hs
src/Network/: NineP.hs
src/Network/NineP/: Effects.hs  Handler.hs  Monad.hs  Server.hs
src/Network/NineP/Effects/: ClientState.hs  Error.hs  GlobalState.hs  Logger.hs  Msg.hs  RunState.hs
test/: Tests.hs
