cabal-version:   3.0
name:            NineP2000
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
copyright:       (c) 2024 James Hobson
maintainer:      james@hobson.space
author:          James Hobson
stability:       experimental
tested-with:     ghc ==9.2.8 || ==9.4.8 || ==8.10.7
homepage:        https://www.hobson.space
bug-reports:     https://github.com/yobson/NineP2000/issues
synopsis:        A monadic 9p file system library
description:
    This is an experimental package attempting to find the most
    idiomaticly haskell way to describe 9p file systems.

category:        Network
build-type:      Simple
extra-doc-files: CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/yobson/NineP2000

library
    exposed-modules:
        Network.NineP.Monad
        Network.NineP.Server

    hs-source-dirs:     src
    other-modules:
        Network.NineP.Handler
        Network.NineP.Effects
        Network.NineP.Effects.Error
        Network.NineP.Effects.RunState
        Network.NineP.Effects.Msg
        Network.NineP.Effects.Logger

    default-language:   Haskell2010
    default-extensions: StrictData
    ghc-options:        -Wall -fprint-potential-instances
    build-depends:
        base >=4.14.3.0 && <5.0,
        NineP >=0.0.2 && <0.1,
        mtl >=2.2.2 && <3.0,
        freer-simple >=1.2.0.0 && <1.3,
        stm >=2.5.0.1 && <2.6,
        network-run <0.3,
        network <4.0,
        attoparsec <0.15,
        text >1 && <1.3,
        binary >=0.8.8.0 && <0.9,
        exceptions >=0.10.4 && <0.11,
        bytestring >=0.10.12.0 && <0.12,
        containers >=0.6.5.1 && <0.7,
        microlens >=0.4 && <0.5,
        microlens-mtl >=0.2.0.0 && <0.3.0.0,
        microlens-freer-simple -any,
        microlens-th >=0.4 && <0.5

library microlens-freer-simple
    exposed-modules:  Lens.Micro.Freer
    hs-source-dirs:   lenses
    default-language: Haskell2010
    ghc-options:      -Wall -fprint-potential-instances
    build-depends:
        base <5.0,
        microlens >=0.4 && <0.5,
        freer-simple >=1.2.0.0 && <1.3

executable Example
    main-is:          Main.hs
    hs-source-dirs:   example
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.14.3.0 && <5,
        NineP2000 -any

test-suite NineP-Monad-test
    type:             detailed-0.9
    test-module:      Tests
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.14.3.0 && <5,
        Cabal >=3.2.1.0 && <3.7,
        QuickCheck -any,
        cabal-detailed-quickcheck -any,
        NineP2000 -any
