cabal-version:      3.0
name:               NinePMonad
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             James Hobson
maintainer:         james@hobson.space
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Network.NineP.Monad
                      Network.NineP.Server
    other-modules:
                      Network.NineP.Handler
                      Network.NineP.Effects
                      Network.NineP.Effects.Msg
                      Network.NineP.Effects.ClientState
                      Network.NineP.Effects.GlobalState
                      Network.NineP.Effects.Error
                      Network.NineP.Effects.Logger
    other-extensions: StrictData
    build-depends:    base < 5.0,
                      bytestring,
                      freer-simple >= 1.2.1.2,
                      network,
                      mtl,
                      network-run,
                      stm,
                      NineP,
                      attoparsec,
                      text,
                      stm,
                      containers,
                      binary,
                      filepath,
                      time
    hs-source-dirs:   src
    default-language: GHC2021

executable NinePMonad
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    ghc-options: -threaded
    build-depends:
        base < 5.0,
                      mtl,
                      freer-simple,
        NinePMonad

    hs-source-dirs:   app
    default-language: GHC2021
